--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "server": "json-server ./src/services/server.json --host 192.168.1.105 -w 750 -p 3333",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
@@ -13,10 +14,12 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "json-server": "^0.16.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
