--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "server": "json-server ./src/services/server.json --host 192.168.1.107 -w 750 -p 3333",
+    "server": "json-server ./src/services/server.json --host 192.168.1.107 -w 2000 -p 3333",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
@@ -20,6 +20,7 @@
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "json-server": "^0.16.3",
+    "lottie-react-native": "3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
